--- a/lesson11/thanks.html
+++ b/lesson11/thanks.html
@@ -51,9 +51,10 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
         <script>
+            updateFooter();
             WebFont.load({
                 google: {
-                    families: ['Open Sans', 'Roboto']
+                    families: ['Open Sans:400,700', 'Roboto:400,700']
                 }
             });
 
