--- a/lesson11/stormcenter.html
+++ b/lesson11/stormcenter.html
@@ -114,9 +114,10 @@
         <script src="js/scripts.js" defer></script>
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
         <script>
+            updateFooter();
             WebFont.load({
                 google: {
-                    families: ['Open Sans', 'Roboto']
+                    families: ['Open Sans:400,700', 'Roboto:400,700']
                 }
             });
 
