--- a/lesson11/stormcenter.html
+++ b/lesson11/stormcenter.html
@@ -3,7 +3,8 @@
 
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Weather for kids.">
         <title>WeatherBee | Stormcenter</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/small.css">
@@ -42,11 +43,11 @@
                 <fieldset>
                     <legend>Personal Information</legend>
                     <label class="top">Full Name*
-                        <input type="text" name="fname" pattern="[A-Za-z]{5,}" placeholder="Full Name" required>
+                        <input type="text" name="fname" pattern="[A-Za-z\s]*" placeholder="Full Name" required>
                     </label>
                     <label class="top">
                         Email
-                        <input type="email" name="email" placeholder="you@example.com">
+                        <input type="email" name="email" placeholder="you@example.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
                     </label>
                     <label class="top">Phone* <input type="tel" name="phone" placeholder="Phone" required></label>
                     <label class="top">Zip Code* <input type="number" name="zip" placeholder="Zip Code" required></label>
@@ -111,7 +112,7 @@
             <div class="copyright">&copy; <span id="copyright-year"></span> WeatherBee.io | Last updated: <span id="modified-date"></span></div>
         </footer>
 
-        <script src="js/scripts.js" defer></script>
+        <script src="js/scripts.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
         <script>
             updateFooter();
