--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -3,10 +3,10 @@
 
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Weather for kids.">
         <title>WeatherBee | Preston</title>
         <link rel="stylesheet" href="css/normalize.css">
-        <!-- <link rel="stylesheet" href="css/styles.css"> -->
         <link rel="stylesheet" href="css/small.css">
         <link rel="stylesheet" href="css/medium.css">
         <link rel="stylesheet" href="css/large.css">
