--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -37,7 +37,7 @@
             </ul>
         </nav>
 
-        <main>
+        <main class="home">
 
             <picture>
                 <source media="(min-width: 1200px)" srcset="images/Banner_Image_1200.jpg">
