--- a/W14/index.html
+++ b/W14/index.html
@@ -15,13 +15,15 @@
   <body>
     <div class="wrapper">
       <div class="hero">
-
+        <picture>
+          <!-- <source media="(min-width: 1200px)" srcset="images/Banner_Image_1200.jpg">
+          <source media="(min-width: 800px)" srcset="images/Banner_Image_800.jpg"> -->
+          <img src="images/scooters.jpg" alt="People on rented scooters">
+        </picture>
       </div>
       <div class="container">
-
-        <h1>Title of Website</h1>
+        <h1>Scooters</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis officia quas similique est quos ratione, voluptatibus eligendi aut nihil iure blanditiis modi deserunt eaque voluptas et labore illum minima beatae!</p>
-
       </div>
     </div>
 
